cambiamento aggiunto nella cartella do index3.html e esercizio3.js

--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,6 @@
 <body>
     <h1>calcolo dell' area di forme geometriche</h1>
     <p>apri la console per vedere il risultat.</p>
-    <script src="sconti.js"></script>
+    <script src="esercizio2.js"></script>
 </body>
 </html>
